--- a/233.html
+++ b/233.html
@@ -1,12 +1,117 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>ECharts练习</title>
+    <script type="text/javascript" src="js/echarts.min.js"></script>
 </head>
+
 <body>
-    hellow 33
+    <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
+    <div id="main" style="width: 600px;height:400px;"></div>
+    <script type="text/javascript">
+        // 基于准备好的dom，初始化echarts实例
+        var myChart = echarts.init(document.getElementById('main'));
+
+        // 指定图表的配置项和数据
+        option = {
+            tooltip: {
+                formatter: "{a} <br/>{c} {b}"
+            },
+            toolbox: {
+                show: true,
+                feature: {
+                    restore: {
+                        show: true
+                    },
+                    saveAsImage: {
+                        show: true
+                    }
+                }
+            },
+            series: [{
+                    name: '指标',
+                    type: 'gauge',
+                    z: 3,
+                    min: 0,
+                    max: 2,
+                    splitNumber: 6,
+                    radius: '50%',
+                    axisLine: { // 坐标轴线
+                        lineStyle: { // 属性lineStyle控制线条样式
+                            width: 10,
+                            color: [[0.5, '#63869e'], [0.64, '#f5e453'], [1, '#c23531']]
+                        }
+                    },
+                    axisTick: { // 坐标轴小标记
+                        length: 15, // 属性length控制线长
+                        lineStyle: { // 属性lineStyle控制线条样式
+                            color: 'auto'
+                        }
+                    },
+                    splitLine: { // 分隔线
+                        length: 20, // 属性length控制线长
+                        lineStyle: { // 属性lineStyle（详见lineStyle）控制线条样式
+                            color: 'auto'
+                        }
+                    },
+                    axisLabel: {
+                        backgroundColor: 'auto',
+                        borderRadius: 2,
+                        color: '#eee',
+                        padding: 3,
+                        textShadowBlur: 2,
+                        textShadowOffsetX: 1,
+                        textShadowOffsetY: 1,
+                        textShadowColor: '#222',
+                        formatter: function (value) {
+                            return parseFloat(value).toFixed(2);
+                        }
+                    },
+                    title: {
+                        // 其余属性默认使用全局文本样式，详见TEXTSTYLE
+                        fontWeight: 'bolder',
+                        fontSize: 20,
+                        fontStyle: 'italic'
+                    },
+                    detail: {
+                        // 其余属性默认使用全局文本样式，详见TEXTSTYLE
+                        
+                        fontWeight: 'bolder',
+                        borderRadius: 30,
+                        backgroundColor: '#444',
+                        borderColor: '#aaa',
+                        shadowBlur: 5,
+                        shadowColor: '#333',
+                        shadowOffsetX: 0,
+                        shadowOffsetY: 3,
+                        borderWidth: 2,
+                        textBorderColor: '#000',
+                        textBorderWidth: 2,
+                        textShadowBlur: 2,
+                        textShadowColor: '#fff',
+                        textShadowOffsetX: 0,
+                        textShadowOffsetY: 0,
+                        fontFamily: 'Arial',
+                        width: 100,
+                        color: '#eee',
+                        rich: {}
+                    },
+                    data: [{
+                        value: 0,
+                        name: 'km/h'
+                    }]
+                }
+            ]
+        };
+        myChart.setOption(option, true);
+        setInterval(function () {
+            option.series[0].data[0].value = (Math.random() * 2).toFixed(2) - 0;
+            
+            myChart.setOption(option, true);
+        }, 2000);
+    </script>
 </body>
+
 </html>
