--- a/233.html
+++ b/233.html
@@ -1,119 +1,98 @@
-<!DOCTYPE html>
-<html>
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ECharts练习</title>
-    <script type="text/javascript" src="js/echarts.min.js"></script>
+
+<title>Forever</title>
+
+<link href="css/default.css" type="text/css" rel="stylesheet">
+<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/garden.js"></script>
+<script type="text/javascript" src="js/functions.js"></script>
+
 </head>
 
 <body>
-    <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
-    <div id="main" style="width: 600px;height:400px;"></div>
-    <script type="text/javascript">
-        // 基于准备好的dom，初始化echarts实例
-        var myChart = echarts.init(document.getElementById('main'));
 
-        // 指定图表的配置项和数据
-        option = {
-            tooltip: {
-                formatter: "{a} <br/>{c} {b}"
-            },
-            toolbox: {
-                show: true,
-                feature: {
-                    restore: {
-                        show: true
-                    },
-                    saveAsImage: {
-                        show: true
-                    }
-                }
-            },
-            series: [{
-                    name: '指标',
-                    type: 'gauge',
-                    z: 3,
-                    min: 0,
-                    max: 2,
-                    splitNumber: 6,
-                    radius: '50%',
-                    axisLine: { // 坐标轴线
-                        lineStyle: { // 属性lineStyle控制线条样式
-                            width: 10,
-                            color: [[0.5, '#63869e'], [0.64, '#f5e453'], [1, '#c23531']]
-                        }
-                    },
-                    axisTick: { // 坐标轴小标记
-                        length: 15, // 属性length控制线长
-                        lineStyle: { // 属性lineStyle控制线条样式
-                            color: 'auto'
-                        }
-                    },
-                    splitLine: { // 分隔线
-                        length: 20, // 属性length控制线长
-                        lineStyle: { // 属性lineStyle（详见lineStyle）控制线条样式
-                            color: 'auto'
-                        }
-                    },
-                    axisLabel: {
-                        backgroundColor: 'auto',
-                        borderRadius: 2,
-                        color: '#eee',
-                        padding: 3,
-                        textShadowBlur: 2,
-                        textShadowOffsetX: 1,
-                        textShadowOffsetY: 1,
-                        textShadowColor: '#222',
-                        formatter: function (value) {
-                            return parseFloat(value).toFixed(2);
-                        }
-                    },
-                    title: {
-                        // 其余属性默认使用全局文本样式，详见TEXTSTYLE
-                        fontWeight: 'bolder',
-                        fontSize: 20,
-                        fontStyle: 'italic'
-                    },
-                    detail: {
-                        // 其余属性默认使用全局文本样式，详见TEXTSTYLE
-                        
-                        fontWeight: 'bolder',
-                        borderRadius: 30,
-                        backgroundColor: '#444',
-                        borderColor: '#aaa',
-                        shadowBlur: 5,
-                        shadowColor: '#333',
-                        shadowOffsetX: 0,
-                        shadowOffsetY: 3,
-                        borderWidth: 2,
-                        textBorderColor: '#000',
-                        textBorderWidth: 2,
-                        textShadowBlur: 2,
-                        textShadowColor: '#fff',
-                        textShadowOffsetX: 0,
-                        textShadowOffsetY: 0,
-                        fontFamily: 'Arial',
-                        width: 100,
-                        color: '#eee',
-                        rich: {}
-                    },
-                    data: [{
-                        value: 0,
-                        name: 'km/h'
-                    }]
-                }
-            ]
-        };
-        myChart.setOption(option, true);
-        setInterval(function () {
-            option.series[0].data[0].value = (Math.random() * 2).toFixed(2) - 0;
-            
-            myChart.setOption(option, true);
-        }, 2000);
-    </script>
+<div id="mainDiv">
+	<div id="content">
+		<div id="code">
+			<span class="comments">/**</span><br />
+			<span class="space"/><span class="comments">*since 2018-10-17</span><br />
+			
+			<span class="space"/><span class="comments">*/</span><br />
+			Boy name = <span class="keyword">Mr</span> KOU<br />
+			Girl name = <span class="keyword">Mrs</span> JIA<br />
+			<span class="comments">// Fall in love river. </span><br />
+			The boy love the girl;<br />
+			<span class="comments">// They love each other.</span><br />
+			The girl loved the boy;<br />
+			<span class="comments">// AS time goes on.</span><br />
+			The boy can not be separated the girl;<br />
+			<span class="comments">// At the same time.</span><br />
+			The girl can not be separated the boy;<br />
+			<span class="keyword">The boy</span> very <span class="keyword">happy</span>;<br />
+			<span class="keyword">The girl</span> is also very <span class="keyword">happy</span>;<br />
+			<span class="placeholder"/><span class="comments">// Whether it is right now</span><br />
+			<span class="placeholder"/><span class="comments">// Still in the distant future.</span><br />
+			<span class="placeholder"/>The boy has but one dream;<br />
+			<span class="comments">// The boy wants the girl could well have been happy.</span><br />
+			<br>
+			<br>
+			I want to say:<br />
+			Baby, I love you forever;<br />
+		</div>
+		<div id="loveHeart">
+			<canvas id="garden"></canvas>
+			<div id="words">
+				<div id="messages">
+					姗姗 这是我们在一起的时光。
+					<div id="elapseClock"></div>
+				</div>
+				<div id="loveu">
+					直到永永远远
+					<br/>
+					<div class="signature">- 寇先生</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<script type="text/javascript">
+var offsetX = $("#loveHeart").width() / 2;
+var offsetY = $("#loveHeart").height() / 2 - 55;
+var together = new Date();
+together.setFullYear(2018, 10, 17);
+together.setHours(10);
+together.setMinutes(58);
+together.setSeconds(0);
+together.setMilliseconds(0);
+
+if (!document.createElement('canvas').getContext) {
+	var msg = document.createElement("div");
+	msg.id = "errorMsg";
+	msg.innerHTML = "Your browser doesn't support HTML5!<br/>Recommend use Chrome 14+/IE 9+/Firefox 7+/Safari 4+"; 
+	document.body.appendChild(msg);
+	$("#code").css("display", "none")
+	$("#copyright").css("position", "absolute");
+	$("#copyright").css("bottom", "10px");
+	document.execCommand("stop");
+} else {
+	setTimeout(function () {
+		startHeartAnimation();
+	}, 5000);
+
+	timeElapse(together);
+	setInterval(function () {
+		timeElapse(together);
+	}, 500);
+
+	adjustCodePosition();
+	$("#code").typewriter();
+}
+</script>
 </body>
-
 </html>
