--- a/233.html
+++ b/233.html
@@ -48,13 +48,13 @@
 			<canvas id="garden"></canvas>
 			<div id="words">
 				<div id="messages">
-					姗姗 这是我们在一起的时光。
+					33
 					<div id="elapseClock"></div>
 				</div>
 				<div id="loveu">
-					直到永永远远
+					233 forever
 					<br/>
-					<div class="signature">- 寇先生</div>
+					<div class="signature">-Mr kou</div>
 				</div>
 			</div>
 		</div>
